--- a/Car Website/package.json
+++ b/Car Website/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@babel/plugin-transform-private-property-in-object": "^7.24.1",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "boxicons": "^2.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
